[package]
name = "transfer-hook-mania"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_mania"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
fixed = "1.27.0"
solana-program = "*"
spl-tlv-account-resolution = "*"
spl-token-2022 = {version="3.0.2", features=["no-entrypoint"]}
spl-transfer-hook-interface = "*"
