[package]
name = "transfer-hook-mania"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_mania"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version="0.30.1", features=["init-if-needed"]}
anchor-spl = "0.30.1"
fixed = "*"
solana-program = "*"
spl-stake-pool = "2.0.0"
spl-tlv-account-resolution = "*"
spl-token-2022 = {version="3.0.2", features=["no-entrypoint"]}
spl-transfer-hook-interface = "*"
